# Financial-Planner

./: .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  config.yaml  requirements.txt  setup.py  setup.sh  start.sh
.claude/: settings.local.json
backend/: README.md  alembic.ini  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_db.py
backend/app/: __init__.py  config.py  errors.py  logging.py  logging_config.py  main.py  models.py
backend/app/db/: __init__.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: ecbbf6781154_v1_create_mvp_schema.py
backend/app/repositories/: base_repository.py  corporate_action_repository.py  lot_repository.py  transaction_repository.py
backend/app/routers/: accounts.py  corporate_actions.py  dashboard.py  instruments.py  portfolio.py  transactions.py
backend/app/seeds/: seed_v1.py
backend/app/services/: base_service.py  corporate_action_service.py  dashboard_service.py  lot_service.py  pnl_service.py  transaction_service.py
backend/data/: app.db
backend/tests/: __init__.py  conftest.py  test_corporate_actions_integration.py  test_dashboard_integration.py  test_errors.py  test_integration.py  test_logging.py  test_main.py  test_prices_pk.py  test_schema_exists.py  test_triggers.py
backend/tests/frontend/: serve_test.py  test_frontend.sh  test_frontend_browser.html
backend/tests/services/: __init__.py  test_corporate_action_service.py  test_dashboard_service.py  test_pnl_service.py
docs/: CLAUDE.md  UX-design.md  api-endpoints.md  checklist.md  description.md
(+28 files in other folders)
